<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homework.mad.expenseapp.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add_expense"
        android:id="@+id/button_add_expense"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:onClick="addExpense"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_edit_expense"
        android:id="@+id/button_edit_expense"
        android:layout_below="@+id/button_add_expense"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:onClick="editExpense"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_delete_expense"
        android:id="@+id/button_delete_expense"
        android:layout_below="@+id/button_edit_expense"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="deleteExpense"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_finish"
        android:id="@+id/button_finish"
        android:onClick="finish"
        android:layout_below="@+id/button_show_expense"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_show_expense"
        android:id="@+id/button_show_expense"
        android:layout_below="@+id/button_delete_expense"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:onClick="showExpense"/>
</RelativeLayout>
