<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homework.mad.expenseapp.AddExpense">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_add_expense"
        android:id="@+id/text_view_add_expense"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_expense_name"
        android:id="@+id/text_view_expense_name"
        android:layout_below="@+id/text_view_add_expense"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_expense_name"
        android:layout_below="@+id/text_view_expense_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_category"
        android:id="@+id/text_view_category"
        android:layout_below="@+id/edit_text_expense_name"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_category"
        android:layout_below="@+id/text_view_category"
        android:entries="@array/spinner_category"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_amount"
        android:id="@+id/text_view_amount"
        android:layout_below="@+id/spinner_category"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_amount"
        android:inputType="number"
        android:layout_below="@+id/text_view_amount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_date"
        android:id="@+id/text_view_date"
        android:layout_below="@+id/edit_text_amount"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_date_picker"
        android:layout_below="@+id/text_view_date"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/edit_text_date"
            android:layout_weight="0.70" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:id="@+id/image_button_calendar"
            android:src="@drawable/calendar"
            android:background="@null"
            android:layout_weight="0.30"
            android:onClick="showCalendar" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_receipt"
        android:id="@+id/text_view_receipt"
        android:layout_below="@+id/layout_date_picker"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_button_receipt"
        android:background="@null"
        android:src="@drawable/search"
        android:layout_below="@+id/text_view_receipt"
        android:onClick="onImageGalleryClicked"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add_expense"
        android:id="@+id/button_add_expense"
        android:layout_below="@+id/image_button_receipt"
        android:layout_marginTop="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="addExpense"/>
</RelativeLayout>
