<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homework.mad.expenseapp.ShowExpense">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="#ffffff"
        android:id="@+id/tableLayout1">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/text_view_expense_detail"
                android:layout_span="4"
                android:padding="6dip"
                android:textColor="#000"
                android:gravity="center"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow
            android:id="@+id/table_row1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/text_view_name"
                android:layout_weight="1"
                android:textSize="18dp"
                android:padding="6dip"
                android:gravity="left"
                />
            <TextView
                android:id="@+id/text_view_name_value"
                android:layout_weight="1"
                android:textSize="18dp"
                android:padding="10dip"
                android:gravity="left"
                android:layout_span="9"/>
        </TableRow>
        <TableRow></TableRow>


        <TableRow
            android:id="@+id/table_row2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/text_view_category"
                android:text="@string/text_view_category"
                android:layout_weight="1"
                android:textSize="18dp"
                android:padding="10dip"
                android:gravity="left"/>
            <TextView
                android:id="@+id/text_view_category_value"
                android:layout_weight="1"
                android:textSize="18dp"
                android:padding="10dip"
                android:gravity="left"
                android:layout_span="9"/>
        </TableRow>
        <TableRow></TableRow>


        <TableRow
            android:id="@+id/table_row3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/text_view_amount"
                android:text="@string/text_view_amount"
                android:layout_weight="1"
                android:textSize="18dp"
                android:padding="10dip"
                android:gravity="left"/>
            <TextView
                android:id="@+id/text_view_amount_value"
                android:layout_weight="1"
                android:textSize="18dp"
                android:padding="10dip"
                android:gravity="left"
                android:layout_span="9"/>
        </TableRow>
        <TableRow></TableRow>

        <TableRow
            android:id="@+id/table_row4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/text_view_date"
                android:text="@string/text_view_date"
                android:layout_weight="1"
                android:textSize="18dp"
                android:padding="10dip"
                android:gravity="left"/>
            <TextView
                android:id="@+id/text_view_date_value"
                android:layout_weight="1"
                android:textSize="18dp"
                android:padding="10dip"
                android:gravity="left"
                android:layout_span="9"/>
        </TableRow>
        <TableRow></TableRow>
    </TableLayout>

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="#ffffff"
        android:id="@+id/tableLayout2"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:id="@+id/table_row5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/text_view_reciept"
                android:layout_span="3"
                android:padding="6dip"
                android:textColor="#000"
                android:gravity="center"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow

            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:id="@+id/table_row6">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_view_receipt"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>
        </TableRow>
    </TableLayout>


    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="#ffffff"
        android:layout_below="@+id/tableLayout2"
        android:layout_centerHorizontal="true"
        android:padding="6dip">

        <TableRow>

            <ImageButton
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/image_button_first"
                android:background="@drawable/first"
                android:onClick="getFirstExpense"
                android:scaleType="fitXY"/>

            <ImageButton
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:id="@+id/image_button_previous"
                android:background="@drawable/previous"
                android:onClick="getPreviousExpense"
                android:layout_gravity="center"
                android:scaleType="fitXY"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_finish"
                android:id="@+id/button_finish"
                android:onClick="finish"
                />

            <ImageButton
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:id="@+id/image_button_next"
                android:background="@drawable/next"
                android:onClick="getNextExpense"
                android:layout_gravity="center"
                android:scaleType="fitXY"/>

            <ImageButton
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:id="@+id/image_button_last"
                android:background="@drawable/last"
                android:onClick="getLastExpense"
                android:layout_gravity="center"
                android:scaleType="fitXY"/>
        </TableRow>

    </TableLayout>
</RelativeLayout>
